--- a/Hooks/02. useReducer.md
+++ b/Hooks/02. useReducer.md
@@ -16,9 +16,7 @@ const counterReducer = (state, action) => {
 
 const [counterState, counterDispatch] = useReducer(
   counterReducer,
-  {
-    count: 0,
-  }
+  {count: 0} // init value counterState
 );
 ```
 
