--- a/Hooks/04. custom hooks.md
+++ b/Hooks/04. custom hooks.md
@@ -1,21 +1,25 @@
-## Aturan hooks
+# Aturan hooks
+
 dua aturan utama hooks:
+
 1. Hanya bisa dipanggil dalam komponen
 2. Tidak bisa dalam nested block
 
 ## Kegunaan
-- reusability code lebih rapi, seperti pola dalam kasus useEffect, didalamnya berisi request ke api dan menghasilkan state data, loading dan error 
+
+- reusability code lebih rapi, seperti pola dalam kasus useEffect, didalamnya berisi request ke api dan menghasilkan state data, loading dan error
 - bisa memanage state, ketika state dalam custom hook update, komponen pemanggil akan re-render
 - bisa outsource setter dan getter dari state
 
 ## Membuat custom hook
+
 1. buat folder dengan nama hooks (bebas)
 2. buat misal useFetch.js
-
 
 >nama fungsi custom hooks harus berawalan use- agar "aturan utama hooks" diterapkan dan error warning aktif
 
 ## Contoh
+
 Let's take **`useFetch`** as a practical example of an advanced custom hook. It's commonly used for making API requests inside React components, and it helps abstract away the fetch logic, loading state, and error handling.
 
 ---
@@ -31,6 +35,7 @@ function useFetch(url, options = {}) {
   const [error, setError] = useState(null);
   const [trigger, setTrigger] = useState(0);
 
+  // State 'trigger' dipakai dependency melakukan fetchData
   const refetch = useCallback(() => {
     setTrigger(prev => prev + 1);
   }, []);
@@ -69,8 +74,6 @@ function useFetch(url, options = {}) {
 
 ```
 
----
-
 ### 📦 **Usage Example**
 
 ```js
@@ -94,5 +97,8 @@ function UsersList() {
     </div>
   );
 }
-
 ```
+
+## Library Custom Hooks
+
+- useHooks
