--- a/Hooks/05. useContext.md
+++ b/Hooks/05. useContext.md
@@ -6,8 +6,6 @@ Untuk mencegah prop-drilling dari parent ke grand-child.
 
 Berikut contoh penulisan **React Context** yang baik menggunakan **Reducer** dan **TypeScript**. Ini adalah pattern yang scalable dan maintainable untuk state global, cocok buat aplikasi menengah hingga besar.
 
----
-
 ## 📦 Struktur Direktori (Opsional, tapi Rapi)
 
 ```bash
@@ -19,8 +17,6 @@ src/
     CounterButtons.tsx
   App.tsx
 ```
-
----
 
 ## 1. Buat file context
 
@@ -70,7 +66,7 @@ type CounterContextType = {
 // 6. Create Context
 const CounterContext = createContext<CounterContextType | undefined>(undefined);
 
-// 7. Provider component
+// 7. Provider component untuk wrap komponen
 export const CounterProvider = ({ children }: { children: ReactNode }) => {
   const [state, dispatch] = useReducer(counterReducer, initialState);
 
@@ -82,6 +78,7 @@ export const CounterProvider = ({ children }: { children: ReactNode }) => {
 };
 
 // 8. Custom hook for consuming context
+// hook Hanya bisa diakses dalam komponen dengan wrapper
 export const useCounter = () => {
   const context = useContext(CounterContext);
   if (!context) {
