modify redux global state mgmt

--- a/state management/03. redux-toolkit.md
+++ b/state management/03. redux-toolkit.md
@@ -1,38 +1,33 @@
 # Redux toolkit
 
-Redux Toolkit adalah library resmi dari Redux yang dirancang untuk memudahkan pengembangan aplikasi menggunakan Redux.
+Redux Toolkit adalah library resmi dari Redux yang dirancang untuk memudahkan pengembangan aplikasi menggunakan Redux. Disediakan fungsi `createSlice()`.
 
-1. Instalasi
+`npm install @reduxjs/toolkit react-redux`
 
-    ```bash
-    npm install @reduxjs/toolkit react-redux
-    ```
+```jsx
+import React from 'react'
+import ReactDOM from 'react-dom/client'
+import { Provider } from 'react-redux'
+import { store } from './app/store'
+import App from './App'
 
-2. Struktur File
+ReactDOM.createRoot(document.getElementById('root')).render(
+  <Provider store={store}>
+    <App />
+  </Provider>
+)
+```
 
-    ```tree
-    store
-    ├─ index.js
-    ├─ counter.js
-    ```
-
----
-
-## Keunggulan `createSlice()` dari redux, dibanding `createReducer()` dari redux-toolkit
+## `createSlice`(redux) VS `createReducer`(redux-toolkit)
 
 ### ✅ Modular & Simpel
 
 `createSlice()` memudahkan pengelolaan state dan reducer dalam satu tempat (per modul/file).
 
-#### ✅ Tidak Perlu Cek `action.type` Manual
-
-Reducer langsung berbentuk fungsi, bukan switch-case panjang.
-
-#### ✅ Boleh Mutasi State Langsung
+- Tidak perlu mengirim object dan tersedia suggestion untuk `action`.
+- Boleh Mutasi State Langsung di reducer
 
 Berkat bantuan **Immer** di balik layar, kita bisa langsung ubah `state` tanpa `return` object baru.
-
----
 
 ```js
 // counter.js
@@ -48,12 +43,9 @@ const counterSlice = createSlice({
   },
 });
 
-
-export const counterActions = counterSlice.actions;
+export const counterActions = counterSlice.actions; // export action
 export default counterSlice.reducer;
 ```
-
----
 
 ## 🏗️ Mengelola Banyak Reducer: `configureStore()`
 
@@ -68,10 +60,11 @@ Fungsi ini menerima parameter objek berisi field reducer didalamnya terdapat red
 ```js
 // index.js
 import { configureStore } from '@reduxjs/toolkit';
+import counterSlice from './counter.js'
 
 const store = configureStore({
   reducer: {
-    counter: counterSlice.reducer,
+    counter: counterSlice,
     // tambah reducer lain di sini
   },
 });
@@ -81,8 +74,6 @@ export default store;
 
 > 🗝 Key pada objek `reducer` menentukan nama slice di global state.
 
----
-
 ## Penggunaan state redux di komponen lain
 
 ```jsx
@@ -91,6 +82,8 @@ import { counterActions } from '../store/counter';
 
 const Counter = () => {
   const dispatch = useDispatch();
+
+  // mengambil nilai
   const counter = useSelector((state) => state.counter.counter);
   const show = useSelector((state) => state.counter.showCounter);
 
@@ -99,11 +92,11 @@ const Counter = () => {
   };
 
   const increaseHandler = () => {
-    dispatch(counterActions.increase(10)); // { type: SOME_UNIQUE_IDENTIFIER, payload: 10 }
+    dispatch(counterActions.increase(10));
   };
 }
 ```
 
----
+## Ekstensi
 
-> Kita juga dapat menginstall ekstensi redux devtools pada browser untuk dapat melihat global state dengan mudah dan dapat merekam sebuah perubahan state
+Terdapat ekstensi `redux devtools` pada browser digunakan untuk dapat melihat global state dengan mudah dan dapat merekam sebuah perubahan state.
