--- a/Hooks/01. useEffect.md
+++ b/Hooks/01. useEffect.md
@@ -4,9 +4,9 @@ Akan dieksekusi saat pertama rendering dan dependency berubah.Dependency dapat b
 
 ## Penggunaan
 
-- tanpa params: useEffect(callback), dijalankan setiap re-render
-- dengan params kosong: useEffect(callback, []) dijalankan ketika mount saja
-- tanpa params: useEffect(callback, [param1, param2]) dijalankan saat mount + setiap param berubah
+- tanpa dependency: useEffect(callback), dijalankan setiap re-render
+- dengan dependency kosong: useEffect(callback, []) dijalankan `ketika mount` saja
+- dengan dependency: useEffect(callback, [dependency1, dependency2]) dijalankan `saat mount + setiap dependecy1 atau 2 berubah`
 
 bisa diletakkan sebuah cleanup function untuk freeup resource/event
 
